--- a/ro1/Cargo.toml
+++ b/ro1/Cargo.toml
@@ -7,11 +7,11 @@ edition = "2024"
 windows = { version = "0.61.3", features = ["Win32_Foundation", "Win32_System_EventLog", "Win32_System_Threading"] }
 ctrlc = "3.4.7"
 as_bool = "0.1.3"
-anyhow = "1.0.99" 
-
+anyhow = "1.0.99"
 crossterm = "0.29.0"
-
 wmi = "0.17.2"
 serde = { version = "1.0", features = ["derive"] }
-
 quick-xml-to-json = "0.1.0"
+tokio = { version = "1.47.1", features = ["rt","macros","rt-multi-thread"]}
+futures = "0.3.31"
+# chrono = "0.4.41" 
