--- a/ro1/Cargo.toml
+++ b/ro1/Cargo.toml
@@ -14,4 +14,5 @@ serde = { version = "1.0", features = ["derive"] }
 quick-xml-to-json = "0.1.0"
 tokio = { version = "1.47.1", features = ["rt","macros","rt-multi-thread"]}
 futures = "0.3.31"
-# chrono = "0.4.41" 
+chrono = { version="0.4.41", features =["serde"] }
+serde_json = "1.0.143" 
