--- a/ro1/Cargo.toml
+++ b/ro1/Cargo.toml
@@ -16,3 +16,7 @@ tokio = { version = "1.47.1", features = ["rt","macros","rt-multi-thread"]}
 futures = "0.3.31"
 chrono = { version="0.4.41", features =["serde"] }
 serde_json = "1.0.143" 
+# duckdb = "1.3.2"
+#surrealdb = { version="2.3.7", features = ["kv-rocksdb"] }
+libsql = "0.9.21"
+
