--- a/ro1/Cargo.toml
+++ b/ro1/Cargo.toml
@@ -19,4 +19,6 @@ serde_json = "1.0.143"
 # duckdb = "1.3.2"
 #surrealdb = { version="2.3.7", features = ["kv-rocksdb"] }
 libsql = "0.9.21"
-
+env_logger = "0.11.8"
+ferrisetw = { version="1.2.0", features=["time_rs"] }
+time = "0.3.43"
