--- a/ro1/Cargo.toml
+++ b/ro1/Cargo.toml
@@ -22,3 +22,4 @@ libsql = "0.9.21"
 env_logger = "0.11.8"
 ferrisetw = { version="1.2.0", features=["time_rs"] }
 time = "0.3.43"
+netstat-esr = "0.8.1"
