--- a/etw_tests/Cargo.toml
+++ b/etw_tests/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+argparse = "0.2.2"
 ctrlc = "3.5.1"
 env_logger = "0.11.8"
 ferrisetw = { version="1.2.0", features=["time_rs"] }
