--- a/etw_tests/Cargo.toml
+++ b/etw_tests/Cargo.toml
@@ -5,14 +5,16 @@ edition = "2024"
 
 [dependencies]
 argparse = "0.2.2"
+chrono = "0.4.42"
 ctrlc = "3.5.1"
 env_logger = "0.11.8"
 ferrisetw = { version="1.2.0", features=["time_rs"] }
 serde = {version="1.0.219", features=["derive"]}
 serde_json = "1.0.143" 
 time = "0.3.43"
-tokio = { version = "1.48.0", features = ["rt","macros","rt-multi-thread"]}
+tokio = { version = "1.48.0", features = ["rt", "macros", "rt-multi-thread"] }
 windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_System_EventLog", "Win32_System_Threading"] }
+wmi = "0.18.0"
 
 [[bin]]
 name = "testlist"
@@ -25,3 +27,8 @@ path ="src/testlist2.rs"
 [[bin]]
 name = "subdiag"
 path = "src/subdiag.rs"
+
+
+[[bin]]
+name = "etwwatch"
+path = "src/etwwatch.rs"
