--- a/dbtest/Cargo.toml
+++ b/dbtest/Cargo.toml
@@ -4,10 +4,13 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+futures-util = "0.3.31"
+google-cloud-bigquery = "0.15.0"
 libsql = "0.9.24"
 serde = {version = "1.0.228", features = ["derive"]}
 serde_json = "1.0.145"
-tokio = "1.47.1"
+sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio"] }
+tokio = {version = "1.47.1", features = ["full"]}
 
 [[bin]]
 name = "mem_to_disk"
@@ -16,3 +19,11 @@ path ="src/mem_to_disk.rs"
 [[bin]]
 name = "copy_test"
 path ="src/copy_test.rs"
+
+[[bin]]
+name = "bqtest"
+path ="src/bqtest.rs"
+
+[[bin]]
+name = "pgtest"
+path = "src/pgtest.rs"
