--- a/ro1/Cargo.toml
+++ b/ro1/Cargo.toml
@@ -8,7 +8,7 @@ windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_System_Ev
 ctrlc = "3.4.7"
 as_bool = "0.1.3"
 anyhow = "1.0.99"
-crossterm = "0.29.0"
+# crossterm = "0.29.0"
 wmi = "0.17.2"
 serde = { version = "1.0", features = ["derive"] }
 quick-xml-to-json = "0.1.0"
@@ -16,8 +16,6 @@ tokio = { version = "1.47.1", features = ["rt","macros","rt-multi-thread"]}
 futures = "0.3.31"
 chrono = { version="0.4.41", features =["serde"] }
 serde_json = "1.0.143" 
-# duckdb = "1.3.2"
-#surrealdb = { version="2.3.7", features = ["kv-rocksdb"] }
 libsql = "0.9.21"
 env_logger = "0.11.8"
 ferrisetw = { version="1.2.0", features=["time_rs"] }
