service list from registry

--- a/ro1/Cargo.toml
+++ b/ro1/Cargo.toml
@@ -22,3 +22,4 @@ ferrisetw = { version="1.2.0", features=["time_rs"] }
 time = "0.3.43"
 netstat-esr = "0.8.1"
 log = "0.4.29"
+winreg = {version="0.55.0", features=["chrono"]}
