--- a/ro1/Cargo.toml
+++ b/ro1/Cargo.toml
@@ -9,7 +9,8 @@ ctrlc = "3.4.7"
 as_bool = "0.1.3"
 anyhow = "1.0.99"
 # crossterm = "0.29.0"
-wmi = "0.17.2"
+#wmi = "0.17.2"
+wmi = "0.18.0" 
 serde = { version = "1.0", features = ["derive"] }
 quick-xml-to-json = "0.1.0"
 tokio = { version = "1.47.1", features = ["rt","macros","rt-multi-thread"]}
