--- a/etw_tests/Cargo.toml
+++ b/etw_tests/Cargo.toml
@@ -9,6 +9,8 @@ chrono = "0.4.42"
 ctrlc = "3.5.1"
 env_logger = "0.11.8"
 ferrisetw = { version="1.2.0", features=["time_rs"] }
+libsql = "0.9.29"
+log = "0.4.29"
 serde = {version="1.0.219", features=["derive"]}
 serde_json = "1.0.143" 
 time = "0.3.43"
@@ -32,7 +34,7 @@ path = "src/subdiag.rs"
 
 [[bin]]
 name = "etwwatch"
-path = "src/etwwatch.rs"
+path = "src/etwwatch/etwwatch.rs"
 
 [[bin]]
 name = "wmicheck"
