--- a/wintest/Cargo.toml
+++ b/wintest/Cargo.toml
@@ -6,3 +6,5 @@ edition = "2024"
 [dependencies]
 argparse = "0.2.2"
 windows = {version = "0.62.2", features=["Win32_Foundation","Win32_System_Threading"] }
+wmi = "0.18.0"
+serde = { version = "1.0", features = ["derive"] }
